syntax = "proto3";

package api.payment;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "public/response/response.proto";
import "validate/validate.proto";
import "payment/types/customer.proto";


option go_package = "store/api/payment;paymentpb";

service Payment {

  rpc GetPaymentState(GetPaymentStateParams) returns (PaymentState) {
    option (google.api.http) = {
      get: "/api/pa/payment-state",
    };
  }

  rpc GetMetadata(google.protobuf.Empty) returns (Metadata) {
    option (google.api.http) = {
      get: "/api/pa/payment-metadata",
    };
  };
  rpc GetCreditStateV2(GetCreditStateV2Params) returns (CreditState) {
    option (google.api.http) = {
      get: "/api/pa/credit-state",
    };
  }

  rpc ListPayments(ListPaymentsParams) returns (PaymentList) {
    option (google.api.http) = {
      get: "/api/pa/payments",
    };
  }

  rpc GetCreditState(GetCreditStateParams) returns (CreditState) {}
  rpc CostCredit(CheckCreditParams) returns (CheckCreditResult) {}
  rpc RollbackCredit(RollbackCreditParams) returns (google.protobuf.Empty) {}

  rpc CreatePayment(CreatePaymentParams) returns (CreatePaymentResult) {
    option (google.api.http) = {
      post: "/api/pa/v2/payments"
      body: "*"
    };
  }

  rpc CreateSubscription(google.protobuf.Empty) returns (CreatePaymentResult) {
    option (google.api.http) = {
      post: "/api/pa/v1/subscriptions"
      body: "*"
    };
  }

  rpc CallbackPayment(CallbackPaymentParams) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/pa/v1/payment-pay10-callback"
      body: "*"
      additional_bindings {
        get: "/api/pa/v1/payment-pay10-callback",
      }
    };
  }

  rpc MockCredit(MockCreditParams) returns (CreditState) {
    option (google.api.http) = {
      post: "/api/pa/v2/credit-cuenysngyewslao3"
      body: "*"
    };
  }

  rpc Create(CreateParams) returns (api.public.response.RedirectResponse) {
    option (google.api.http) = {
      get: "/api/pa/v1/payments",
    };
  };
  rpc CreateV2(CreateParams) returns (api.public.response.RedirectResponse) {
    option (google.api.http) = {
      get: "/api/pa/v2/payments",
    };
  };
  rpc CreateV3(CreateParams) returns (CreateResult) {
    option (google.api.http) = {
      get: "/api/pa/v3/payments",
    };
  };
  rpc CreateIntent(CreateIntentParams) returns (Intent) {
    option (google.api.http) = {
      get: "/api/pa/v1/payment-intents",
    };
  };
  rpc CallbackByAirWallex(CallbackByAirWallexParams) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/pa/v1/pay/airwallex-callback",
      body: "*"
    };
  }

  rpc CallbackByAppleV2(CallbackByAppleV2Params) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/pa/v2/pay/apple-callback",
      body: "*"
    };
  }

  rpc CallbackByApple(CallbackByAppleParams) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/pa/v1/pay/apple-callback",
      body: "*"
    };
  }
  rpc GeneratePayment(GeneratePaymentParams) returns (google.protobuf.Empty);
  rpc GetCustomer (GetCustomerParams) returns (api.payment.types.Customer) {};
}

message MockCreditParams {
  string action = 1;
  string emailOrPhone = 2;
  string planId = 3;
  int64 amount = 4;
}

message GetPaymentStateParams {

}
message PaymentState {
  string subscribingPlanId = 1;
}

message ListPaymentsParams {
  int64 page = 1;
  int64 size = 2;
}


message CreditChange {
  string id = 1;
}

message CreditChangeList {
  repeated CreditChange list = 1;
  int64 total = 2;
  int64 page = 3;
  int64 size = 4;
}

message Payment_ {

}

message PaymentList {
  repeated Payment_ list = 1;
  int64 total = 2;
  int64 page = 3;
  int64 size = 4;
}

message GetPaymentParams {

}

message GeneratePaymentParams{

}

message CallbackByAppleV2Params {
  string signedPayload = 1;
}

message CallbackByAppleParams {
  string productId = 1;
  string transactionReceipt = 2;
}

message CallbackByAirWallexParams {
  message Data {
    Object object = 1;
  }

  message Object {
    string  customer_id = 1;
    string merchant_order_id = 3;
  }

  string id = 1;
  string name = 2;
  Data data = 3;
}


message CreateIntentParams {

  string planId = 1;
  string level = 2;
  string cycle = 3;
  string successUrl = 4;
}


message Intent {
  string clientSecret = 1;
  double amount = 2;
  string id = 3;
  string currency = 4;
  string mode = 5;
  string countryCode = 6;
}

message CreateResult {
  string clientSecret = 1;
}

message Metadata {

  message Feature {
    string name = 1;
    int64 value = 2;
  }

  message Plan {
    string id = 1;
    string title = 2;
    double amount = 3;
    double cnyAmount = 8;
    double originAmount = 4;
    int64 months = 5;
    int64 creditPerMonth = 6;
    string mode = 10;

    repeated Feature features = 7;
    string extra = 9;

    bool duplicated = 20;
    repeated string alias = 11;
  }

  repeated Plan plans = 1;
}

//message MockPaymentParams {
//  string emailOrPhone = 1;
//  string planId = 2;
//}
//
//message MockDiscardPaymentParams {
//  string emailOrPhone = 1;
//}
//
//message MockPaymentResult {
//  string planId = 1;
//  int64 remaining = 2;
//  string paymentId = 3;
//  string userId = 4;
//}
//
//message MockDecrCreditParams {
//  string emailOrPhone = 1;
//  int64 amount = 2;
//}
//
//message MockDecrCreditResult {
//  int64 remaining = 2;
//}
//
//message MockDiscardPaymentResult {
//  int64 remaining = 2;
//}

message RollbackCreditParams {
  string userId = 1;
  int64 amount = 2;
}

message CheckCreditParams {
  string userId = 1;
  int64 cost = 2;
  string key = 3;
}

message CheckCreditResult{
  bool ok = 1;
  string costId = 2;
  int64 remaining = 3;
  int64 amount = 4;
  string planId = 5;
}


message CreditState {
  string userId = 1;
  int64 total = 2;
  int64 used = 3;
  int64 remaining = 7;
  string rechargeId = 8;
  string planId = 4;
  string paymentId = 5;
  int64 expireAt = 6;
  bool show = 10;
}

message GetCreditStateV2Params {
}


message GetCreditStateParams {
  string userId = 1;
}

message CreatePaymentParams {
  string planId = 1;
  string payMethod = 2;
  string returnUrl = 3;
}
message CreatePaymentResult {
  string url = 1;
}


message CallbackPaymentParams {
  string out_trade_no = 1;
}

message CreateParams {
  string level = 2 [(validate.rules).string = {}];
  string cycle = 3 [(validate.rules).string = {}];
  string successUrl = 4 [(validate.rules).string = {min_len: 1}];
  string cancelUrl = 5;
  string promotionCode = 7;
  string couponID = 8;
}

message SubscribeResult {
  string paymentUrl = 1;
}

message SubscribeParams {
  string userId = 1 [(validate.rules).string = {min_len: 1}];
  string level = 2 [(validate.rules).string = {}];
  string cycle = 3 [(validate.rules).string = {}];
  string successUrl = 4 [(validate.rules).string = {min_len: 1}];
  string cancelUrl = 5 [(validate.rules).string = {min_len: 1}];
  string email = 6 [(validate.rules).string = {}];
  string promotionCode = 7;
  string couponID = 8;
}

message GetCustomerParams {
  string version = 1;
  string userEmail = 2 [(validate.rules).string = {min_len: 1}];
}

//message UpdateSubscribeParams {
//  string userId = 1 [(validate.rules).string = {}];
//  string subscriptionId = 2 [(validate.rules).string = {min_len: 1}];
//  string sessionId = 3 [(validate.rules).string = {}];
//  string rawData = 4 [(validate.rules).string = {}];
//  string event = 5  [(validate.rules).string = {min_len: 1}];
//  int64 currentPeriodExpireAt = 6;
//  map<string, string> state = 7;
//}
//
//message CreateSubscribeParams {
//  string userId = 1 [(validate.rules).string = {min_len: 1}];
//  string level = 2 [(validate.rules).string = {in: ["starter", "pro", "pro_plus"]}];
//  string cycle = 3 [(validate.rules).string = {}];
//  string successUrl = 4 [(validate.rules).string = {min_len: 1}];
//  string cancelUrl = 5 [(validate.rules).string = {min_len: 1}];
//  string email = 6 [(validate.rules).string = {}];
//  map<string, string> state = 7;
//}
//
//message CreateSubscribeResult {
//  string paymentUrl = 1;
//  string sessionId = 2;
//}

