syntax = "proto3";

package api.voiceagent;

option go_package = "store/api/voiceagent;voiceagent";

// Scene (场景): 利用 ElevenLabs 的 Personalization 能力，为对话提供环境氛围。
// [参考文档]: Design and Configure -> Personalization (/docs/agents-platform/customization/personalization)
message Scene {
  // _id: 场景 ID。
  string _id = 1 [json_name = "_id"];
  
  // userId: 创建者用户 ID (系统预设为空或特定标识)。
  string userId = 2;

  // name: 场景名称 (如: 雨夜书房)。
  string name = 3;
  
  // backgroundUrl: 场景视觉背景素材。
  string backgroundUrl = 4;
  
  // ambientSoundUrl: 环境白噪音 URL (如雨声)。
  // [用法]: 由客户端在语音对话时同步播放，实现全感官沉浸。
  string ambientSoundUrl = 5;
  
  // scenarioPrompt: 场景覆盖提示词。
  // [必要性]: 关键。通过 Overrides 机制注入 LLM，改变其当前处境感知。
  // [含义]: 例如“你现在坐在暖和的壁炉旁，外面雪下得很大”。
  // [参考文档]: Overrides -> Dynamic Variables (/docs/agents-platform/customization/personalization#dynamic-variables)
  string scenarioPrompt = 6;
  
  // isPopular: 运营标签。
  bool isPopular = 7;
}
